--- a/resources/log4j.properties
+++ b/resources/log4j.properties
@@ -16,4 +16,4 @@ log4j.appender.R.layout.ConversionPattern=[%d][%p][%c] %m%n
 
 ### root logger sets the minimum logging level
 ### and aggregates the appenders
-log4j.rootLogger=DEBUG, stdout, R
+log4j.rootLogger=INFO, stdout, R
